# prompt-blender

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
prompt_blender/: __main__.py  arguments.py  blend.py  info.py  model.py  modules_loader.py  preferences.py  result_file.py
prompt_blender/analysis/: analyse_results.py  gpt_cost.py  gpt_json.py
prompt_blender/gui/: MainMenu.py  PromptNotebookPanel.py  __init__.py  config_dialog.py  config_dialog_2.py  config_model.py  execute.py  input_list.py  llm_config.py  main_wx.py  model.py  preferences.py  progress.py  run_configurations.py
prompt_blender/gui/dialogs/: ExecuteDialog.py  JsonWizardDialog.py  PreferencesDialog.py  ProgressDialog.py  RagEmbeddingDialog.py  RunConfigurationsDialog.py  __init__.py
prompt_blender/gui/examples/: celsius_to_fahrenheit_simple.pbp  english_translation.json  english_translation.pbp  lookup_weather_GPT.pbp  temperature_conversion_bidirectional.pbp
prompt_blender/llms/: browser_use.py  chatgpt.py  chatgpt_manual.py  deepseek.py  dummy.py  execute_llm.py  gemini.py  groq.py  maritaca.py
prompt_blender/llms/common/: openai_compatible.py  stats.py
prompt_blender/rag/: embedding.py
sample/: prompt.txt
sample/input/: a.txt
samples/: GSM8K.pbp
test/: test_arguments.py  test_cache.py  test_conversions.py  test_date_handling.py  test_interpolation.py  test_load_templates.py  test_result_file.py  test_teste_merge.py  test_version.py
