[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["prompt_blender/*"]

[project]
name = "prompt-blender"
version = "0.1.0"
dependencies = [
  "pyperclip>=1.8.2",
  "pandas>=2.0.3",
  "openai>=1.29.0",
  "openpyxl>=3.1.2",
  "wxPython>=4.2.1",
  "groq>=0.11.0",
]
requires-python = ">=3.8"
authors = [
  {name = "Edans Sandes"},
]
description = "Tool designed to automate the generation, execution, and analysis of prompts for use in language learning models (LLMs). It simplifies the task of creating multiple prompts by automatically filling variables within a template, generating a Cartesian product of prompts, and analyzing the results returned by the model's API."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["llm", "gpt", "prompt", "cross product", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/edanssandes/prompt-blender"

[project.scripts]
prompt-blender = "prompt_blender:__main__.py"
